--- a/index.html
+++ b/index.html
@@ -2,125 +2,135 @@
 <html lang="zh-CN">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>[幻想小镇 日常] 隐私政策（体验版）</title>
+<title>《幻想小镇·日常》隐私政策（中国区·体验版｜需同意方可使用）</title>
 <style>
-  :root { --fg:#1a1a1a; --muted:#666; --bg:#fff; --card:#fafafa; --link:#0b57d0; }
-  html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font:15px/1.7 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,"PingFang SC","Hiragino Sans GB","Microsoft YaHei",sans-serif}
-  main{max-width:920px;margin:0 auto;padding:32px 16px}
-  h1{font-size:22px;margin:0 0 12px}
-  .meta{color:var(--muted);margin-bottom:24px}
-  section{background:var(--card);border-radius:10px;padding:18px 16px;margin:14px 0;border:1px solid #eee}
-  h2{font-size:17px;margin:6px 0 12px}
-  ul{padding-left:18px;margin:8px 0}
-  a{color:var(--link);text-decoration:none}
-  a:hover{text-decoration:underline}
+  :root{--fg:#111;--muted:#666;--bg:#fff;--card:#fafafa;--line:#eee;--link:#0b57d0}
+  html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font:15px/1.7,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,"PingFang SC","Hiragino Sans GB","Microsoft YaHei",sans-serif}
+  main{max-width:920px;margin:0 auto;padding:28px 16px}
+  h1{font-size:22px;margin:0 0 8px}
+  .meta{color:var(--muted);margin-bottom:20px}
+  section{background:var(--card);border:1px solid var(--line);border-radius:10px;padding:16px;margin:12px 0}
+  h2{font-size:17px;margin:4px 0 10px}
+  ul{padding-left:18px;margin:6px 0}
+  a{color:var(--link);text-decoration:none} a:hover{text-decoration:underline}
   code{background:#f2f2f2;border-radius:4px;padding:1px 4px}
+  table{width:100%;border-collapse:collapse;margin:8px 0}
+  th,td{border:1px solid var(--line);padding:8px 10px;vertical-align:top}
+  th{background:#f6f7f8;text-align:left}
   .small{color:var(--muted);font-size:13px}
-  footer{margin-top:28px;color:var(--muted);font-size:13px}
+  footer{margin-top:24px;color:var(--muted);font-size:13px}
 </style>
 <main>
-  <h1>[幻想小镇 日常] 隐私政策（体验版）</h1>
-  <div class="meta">最后更新时间：2025-10-11　|　生效日期：2025-10-11</div>
+  <h1>《幻想小镇·日常》隐私政策（中国区·体验版｜需同意方可使用）</h1>
+  <div class="meta">最后更新时间：2025-10-11｜生效日期：2025-10-11｜版本：v1.3-CN</div>
 
   <section>
-    <h2>一、引言</h2>
-    <p>感谢您体验《幻想小镇 日常》（下称“本游戏”）。我们非常重视您的个人信息与隐私保护。本政策旨在依据《个人信息保护法》《网络安全法》《数据安全法》等法律，向您清晰说明我们如何收集、使用、存储和保护您的个人信息，以及您所享有的权利。</p>
-    <p class="small">说明：当前为 <b>免费试玩版</b>，不含任何付费内购与广告变现模块。若未来功能变化，我们将及时更新本政策并在显著位置提示。</p>
+    <h2>一、引言与使用须知</h2>
+    <p>感谢您体验《幻想小镇·日常》（下称“本游戏”）。我们重视您的个人信息与隐私保护。本政策依据《个人信息保护法》《数据安全法》《网络安全法》等规定制定。</p>
+    <p><b>重要提示（同意门槛）：</b>为向您提供本游戏的基本运行、账号登录与云存档等核心功能，我们需要在本政策所述范围内处理您的相关信息。<b>您在安装/首次启动时点击“同意”即表示已阅读并接受本政策；如您不同意，请不要使用并立即卸载。</b></p>
+    <p class="small">本中国区体验版<b>未接入任何广告或商业化 SDK</b>（含 TapADN、Unity Ads/Mediation 等），<b>不主动读取</b> <code>Android ID</code>。如未来功能变化，我们将显著提示并<b>重新征得您的同意</b>。</p>
   </section>
 
   <section>
     <h2>二、适用范围</h2>
     <ul>
-      <li>当您在 <b>TapTap 平台（中国大陆）</b>下载、安装并游玩本游戏时；</li>
-      <li>当您通过评论区、私信或邮件向我们反馈问题时。</li>
+      <li>当您通过 <b>TapTap（中国大陆）</b> 下载、安装并启动/使用本游戏；</li>
+      <li>当您通过游戏内设置、评论区或邮件与我们联系时。</li>
     </ul>
   </section>
 
   <section>
     <h2>三、我们如何收集与使用个人信息</h2>
-    <p>为实现游戏基础运行、云存档、Bug 排查与账户安全等目的，我们可能在下列场景收集并使用与您有关的信息：</p>
+    <p>遵循<b>最小必要</b>原则，仅为实现核心功能而处理以下信息：</p>
     <ul>
-      <li><b>基础运行所需信息</b>：设备型号、操作系统版本、设备标识（如 <code>Android ID</code>）、网络状态、分辨率、崩溃日志与性能数据（帧率、加载时长）。用于保障兼容性、性能优化与崩溃定位。</li>
-      <li><b>账户与存档</b>：当您使用 TapTap 登录与云存档功能时，我们会接收由平台提供的<b>平台唯一标识</b>（如 <code>unionId</code> 或等效标识），并将其与您的游戏存档进行关联，以实现跨设备/跨版本的进度保存与找回。</li>
-      <li><b>问题反馈</b>：当您在评论区或邮件反馈问题时，您可能自愿提供截图、设备信息、联系方式及问题描述；我们仅用于排查与回复。</li>
+      <li><b>账号登录与云存档</b>：当您使用 Tap 登录并开启云存档时，我们接收由平台提供的<b>平台账号标识</b>（如 <code>unionId</code> 或等效标识），并与您的游戏存档关联，用于进度同步、找回与账号安全。</li>
+      <li><b>稳定性与兼容性</b>：为定位崩溃与性能问题，可能处理设备与系统信息（设备型号、系统版本）、运行日志（崩溃堆栈、异常时间）及基础网络信息。</li>
+      <li><b>传感器使用（按需）</b>：默认<b>不启用</b>传感器。仅当您进入需要体感交互的玩法时，才会使用加速度计/陀螺仪；退出玩法即停止。</li>
+      <li><b>问题反馈</b>：当您主动提交截图、设备信息或联系方式时，仅用于问题排查与沟通。</li>
     </ul>
-    <p class="small">我们<b>不</b>收集与游戏无关的通讯录、短信内容、相册内容、精准定位、面部/声纹等生物识别信息。</p>
+    <p class="small"><b>关于设备标识：</b>本版本<b>不主动读取</b> <code>Android ID</code>。如未来确需设备标识（例如 OAID）用于安全或统计，我们将以显著方式告知处理目的、范围和关闭方式，并在读取前<b>再次征得您的同意</b>。</p>
   </section>
 
   <section>
-    <h2>四、第三方服务与SDK</h2>
-    <p>为实现登录与云存档等功能，我们接入了以下第三方服务：</p>
-    <ul>
-      <li><b>TapTap（心动网络/易玩网络相关服务）</b>：用于账号登录、玩家身份标识与云存档存取。该服务可能收集设备标识、平台账号标识、网络信息等，用于账户体系与安全风控。</li>
-    </ul>
-    <p>第三方服务会依据其各自的隐私政策处理信息。建议您查阅相应政策以了解其收集与使用方式。若您选择不使用上述功能，可在设置中退出登录（或不登录）并仅使用本地存档。</p>
+    <h2>四、第三方服务与 SDK（本版本实际接入）</h2>
+    <p>为实现账号体系与云存档，本版本仅接入以下服务；<b>未接入任何广告/跟踪类 SDK</b>：</p>
+    <table>
+      <thead>
+        <tr><th>名称</th><th>场景/目的</th><th>处理信息与范围</th><th>隐私政策</th></tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>TapTap（登录/云存档）</td>
+          <td>账号登录、身份标识、云端存档同步与找回</td>
+          <td>平台账号标识（如 <code>unionId</code>）、必要的设备/应用信息（用于兼容性与安全）；<b>不读取 Android ID</b>。</td>
+          <td><a href="https://www.taptap.cn/privacy" target="_blank" rel="noopener">Tap 隐私政策</a></td>
+        </tr>
+        <tr>
+          <td>Unity 引擎运行时</td>
+          <td>游戏基础运行</td>
+          <td>不收集可直接识别您身份的信息；传感器默认关闭，仅在相应玩法开启时使用。</td>
+          <td>—</td>
+        </tr>
+      </tbody>
+    </table>
+    <p class="small"><b>未接入说明：</b>本版本未接入 TapADN、Unity Ads/Mediation 等广告或跟踪类 SDK。</p>
   </section>
 
   <section>
-    <h2>五、权限使用说明</h2>
+    <h2>五、权限与系统能力使用</h2>
     <ul>
-      <li><b>网络访问</b>：用于版本校验、云存档、问题上报与基础联网功能。</li>
-      <li><b>存储读写</b>：用于本地存档、配置文件与缓存资源的读写。</li>
-      <li><b>通知/震动（可选）</b>：用于提示下载完成、提示重要更新或活动（如后续启用，将在系统层面征得授权）。</li>
+      <li><b>网络访问</b>：用于登录校验、云存档与必要的在线交互。</li>
+      <li><b>存储读写</b>：用于本地存档和配置文件读写。</li>
+      <li><b>传感器（加速度计/陀螺仪）</b>：默认关闭，仅在进入相关玩法时启用；非必需。</li>
+      <li><b>通知/震动（可选）</b>：用于重要更新提醒，由系统再次授权。</li>
     </ul>
-    <p>除为实现相应功能所必需的权限外，我们不会请求与功能无关的权限。您可在设备系统设置中随时管理授权状态，可能导致部分功能不可用。</p>
   </section>
 
   <section>
     <h2>六、Cookie 与同类技术</h2>
-    <p>本试玩版未使用网页 Cookie。若未来在游戏内嵌网页组件产生 Cookie，我们将于相应模块另行提示。</p>
+    <p>本体验版未使用网页 Cookie。若未来在游戏内嵌网页组件产生 Cookie，我们将另行提示并征得您的同意。</p>
   </section>
 
   <section>
-    <h2>七、个人信息的存储与跨境</h2>
+    <h2>七、信息存储与跨境</h2>
     <ul>
       <li><b>存储地点</b>：本地存档保存在您的设备；云存档（如启用）存储在第三方服务提供的中国境内服务器或其告知的存放位置。</li>
-      <li><b>存储期限</b>：本地/云存档与必要日志会在您使用期间保存。若您<b>连续12个月未登录/未使用</b>，我们可能对云端存档进行清理前提醒或匿名化处理。</li>
-      <li><b>跨境传输</b>：当前版本<b>不进行</b>个人信息跨境传输。若未来发生，我们将遵循法律要求另行取得您的单独同意并履行必要合规义务。</li>
+      <li><b>存储期限</b>：在实现功能所必需的最短期间保存。若您<b>连续12个月未登录/未使用</b>，我们可能在通知后对云端存档进行清理或匿名化处理。</li>
+      <li><b>跨境传输</b>：当前版本<b>不进行</b>个人信息跨境传输。如未来发生，我们将依法完成评估/备案并<b>单独征求您的明确同意</b>。</li>
     </ul>
   </section>
 
   <section>
-    <h2>八、信息安全</h2>
-    <p>我们采取合理且必要的安全措施保护您的信息安全，包括数据最小化、访问控制、传输加密与脱敏处理等。尽管如此，任何网络环境都无法保证百分之百安全。如发生安全事件，我们将按照法律法规要求履行告知、上报与补救义务。</p>
+    <h2>八、信息安全措施</h2>
+    <p>我们采取访问控制、最小权限、传输加密、脱敏存储等措施保护您的信息安全。如发生安全事件，我们将按法规履行告知、上报与补救义务。</p>
   </section>
 
   <section>
     <h2>九、未成年人保护</h2>
-    <p>本游戏面向<b>青少年及以上</b>用户，不以14周岁以下未成年人为目标用户。若您为未成年人，请在监护人同意与指导下使用并提交个人信息。监护人如对未成年人信息保护有疑问，可通过本政策“联系我们”条款与我们取得联系。</p>
+    <p>本游戏面向<b>青少年及以上</b>用户，不以14周岁以下未成年人为目标用户。未成年人应在监护人同意并指导下使用。监护人可通过本政策“联系我们”与我们取得联系，处理与未成年人相关的个人信息事宜。</p>
   </section>
 
   <section>
-    <h2>十、您的权利</h2>
-    <p>依据法律规定，您对个人信息享有如下权利：</p>
+    <h2>十、您的权利与实现路径</h2>
     <ul>
-      <li><b>查阅/复制</b>：您可联系我们查阅或复制与您相关的个人信息（如平台标识、存档关联信息等）。</li>
-      <li><b>更正/补充</b>：如发现信息不准确，您可申请更正。</li>
-      <li><b>删除</b>：在法律规定情形下（如超出必要范围、撤回同意、终止服务等），您可申请删除。</li>
-      <li><b>撤回同意</b>：您可随时撤回对非必要信息处理的同意（例如退出登录停止云存档）。</li>
-      <li><b>账户注销</b>：如您需要解除与平台账号的游戏绑定，请联系我们或通过平台提供的路径处理。</li>
-      <li><b>获取个人信息处理规则说明</b>：您有权请求我们对个人信息处理规则进行说明。</li>
+      <li><b>访问/复制、更正/补充、删除</b>：您可就与您相关的信息提出相应请求。</li>
+      <li><b>撤回同意与停止使用</b>：您可随时撤回同意并停止使用本游戏；撤回后我们将停止处理相应信息（法律法规另有规定的除外），并可为您提供账号解绑/数据删除支持。</li>
+      <li><b>注销/解绑</b>：您可申请解除与平台账号的绑定或注销相关数据。</li>
+      <li><b>获取说明</b>：可请求我们就个人信息处理规则提供说明。</li>
     </ul>
-    <p>为保障安全，我们可能需要您提供必要的身份验证信息，以便处理相关请求。</p>
+    <p class="small"><b>不同意即不使用：</b>若您不同意本政策，请不要安装或使用本游戏并立即卸载；若已安装且不同意，请退出并卸载。</p>
   </section>
-
+ 
   <section>
-    <h2>十一、变更与更新</h2>
-    <p>当功能或规则发生重大变化（如新增需要收集的个人信息类型、处理目的、处理方式、向第三方共享等），我们将通过游戏内公告或弹窗等合理方式提示并重新征得您的同意。最新版本将以本页面展示为准。</p>
-  </section>
-
-  <section>
-    <h2>十二、联系我们</h2>
-    <p>若您对本政策或个人信息保护有任何疑问、建议或投诉，请通过以下方式联系我们：</p>
+    <h2>十一、联系我们</h2>
+    <p>如对本政策或个人信息保护有任何问题、建议或投诉，请联系：</p>
     <ul>
-      <li><b>TapTap</b>：在本游戏的 TapTap 页面评论区或私信联系开发者；</li>
+      <li><b>TapTap</b>：在本游戏 TapTap 页面评论区或私信联系开发者；</li>
       <li><b>电子邮箱</b>：<a href="mailto:shanflyer@qq.com">shanflyer@qq.com</a>（如邮箱变更，以游戏内公告为准）。</li>
     </ul>
-    <p>我们将尽快（一般不超过15个工作日）核查并予以回复处理。</p>
+    <p>我们将在收到您的请求后尽快反馈</b>。</p>
   </section>
 
-  <footer>
-    © 2025 《幻想小镇 日常》开发者-永飞山。保留所有权利。
-  </footer>
+  <footer>© 2025 《幻想小镇·日常》开发者-永飞山。保留所有权利。</footer>
 </main>
 </html>
