--- a/index.html
+++ b/index.html
@@ -26,29 +26,63 @@
 
   <section>
     <h2>一、引言与使用须知</h2>
-    <p>感谢您体验《幻想小镇·日常》（下称“本游戏”）。我们重视您的个人信息与隐私保护。本政策依据《个人信息保护法》《数据安全法》《网络安全法》等规定制定。</p>
-    <p><b>重要提示（同意门槛）：</b>为向您提供本游戏的基本运行、账号登录与云存档等核心功能，我们需要在本政策所述范围内处理您的相关信息。<b>您在安装/首次启动时点击“同意”即表示已阅读并接受本政策；如您不同意，请不要使用并立即卸载。</b></p>
-    <p class="small">本中国区体验版<b>未接入任何广告或商业化 SDK</b>（含 TapADN、Unity Ads/Mediation 等），<b>不主动读取</b> <code>Android ID</code>。如未来功能变化，我们将显著提示并<b>重新征得您的同意</b>。</p>
+    <p>感谢您体验《幻想小镇·日常》（下称“本游戏”）。我们依据相关法律法规保护您的个人信息。</p>
+    <p><b>重要提示：</b>为保证本游戏的<b>基本运行、账号登录与云存档</b>等核心功能，我们会在下文所述范围内处理必要信息。<b>您点击“同意”即表示已阅读并接受本政策；如您不同意，请不要使用并立即卸载。</b></p>
+    <p class="small">本中国区体验版<b>未接入任何广告或商业化 SDK</b>（含 TapADN、Unity Ads/Mediation 等）。如未来功能变化，将显著提示并<b>重新征得您的同意</b>。</p>
   </section>
 
   <section>
     <h2>二、适用范围</h2>
     <ul>
-      <li>当您通过 <b>TapTap（中国大陆）</b> 下载、安装并启动/使用本游戏；</li>
-      <li>当您通过游戏内设置、评论区或邮件与我们联系时。</li>
+      <li>您通过 <b>TapTap（中国大陆）</b> 下载、安装并启动/使用本游戏；</li>
+      <li>您通过游戏内设置、评论区或邮件与我们联系时。</li>
     </ul>
   </section>
 
   <section>
-    <h2>三、我们如何收集与使用个人信息</h2>
-    <p>遵循<b>最小必要</b>原则，仅为实现核心功能而处理以下信息：</p>
-    <ul>
-      <li><b>账号登录与云存档</b>：当您使用 Tap 登录并开启云存档时，我们接收由平台提供的<b>平台账号标识</b>（如 <code>unionId</code> 或等效标识），并与您的游戏存档关联，用于进度同步、找回与账号安全。</li>
-      <li><b>稳定性与兼容性</b>：为定位崩溃与性能问题，可能处理设备与系统信息（设备型号、系统版本）、运行日志（崩溃堆栈、异常时间）及基础网络信息。</li>
-      <li><b>传感器使用（按需）</b>：默认<b>不启用</b>传感器。仅当您进入需要体感交互的玩法时，才会使用加速度计/陀螺仪；退出玩法即停止。</li>
-      <li><b>问题反馈</b>：当您主动提交截图、设备信息或联系方式时，仅用于问题排查与沟通。</li>
-    </ul>
-    <p class="small"><b>关于设备标识：</b>本版本<b>不主动读取</b> <code>Android ID</code>。如未来确需设备标识（例如 OAID）用于安全或统计，我们将以显著方式告知处理目的、范围和关闭方式，并在读取前<b>再次征得您的同意</b>。</p>
+    <h2>三、信息处理规则（收集/使用/触发/停止）</h2>
+    <p>我们遵循<b>最小必要</b>原则，仅在必要场景处理信息。关键信息项、处理目的、触发时机与停止条件如下：</p>
+    <table>
+      <thead>
+        <tr>
+          <th>场景/功能</th>
+          <th>处理信息（最小化）</th>
+          <th>目的</th>
+          <th>触发时机</th>
+          <th>停止条件</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><b>账号登录与云存档</b></td>
+          <td>平台提供的账号标识（如 <code>unionId</code> 或等效标识）</td>
+          <td>身份校验、进度同步与找回、账号安全</td>
+          <td>您主动使用 Tap 登录并开启云存档时</td>
+          <td>您退出登录/解绑或申请删除相关数据后</td>
+        </tr>
+        <tr>
+          <td><b>稳定性与兼容性</b></td>
+          <td>设备/系统信息（机型、系统版本）、运行日志（崩溃堆栈/异常时间）、基础网络信息</td>
+          <td>问题定位与性能优化，保障游戏稳定运行</td>
+          <td>游戏运行过程中发生异常或您同意的诊断上报</td>
+          <td>问题处理完成或达到最短必要保存期后</td>
+        </tr>
+        <tr>
+          <td><b>体感玩法（可选）</b></td>
+          <td>加速度计/陀螺仪数据（仅用于当前玩法交互）</td>
+          <td>实现体感操作</td>
+          <td>仅当您进入需要体感的玩法时</td>
+          <td>退出该玩法即停止，且不在后台持续获取</td>
+        </tr>
+        <tr>
+          <td><b>问题反馈（您主动提交）</b></td>
+          <td>您提供的截图、设备信息、联系方式（如邮箱）</td>
+          <td>沟通与问题排查</td>
+          <td>您通过反馈渠道主动提交时</td>
+          <td>问题办结或您要求删除后</td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
   <section>
@@ -62,73 +96,65 @@
         <tr>
           <td>TapTap（登录/云存档）</td>
           <td>账号登录、身份标识、云端存档同步与找回</td>
-          <td>平台账号标识（如 <code>unionId</code>）、必要的设备/应用信息（用于兼容性与安全）；<b>不读取 Android ID</b>。</td>
+          <td>平台提供的账号标识；为安全与兼容性所需的应用/设备运行信息。</td>
           <td><a href="https://www.taptap.cn/privacy" target="_blank" rel="noopener">Tap 隐私政策</a></td>
         </tr>
         <tr>
           <td>Unity 引擎运行时</td>
           <td>游戏基础运行</td>
-          <td>不收集可直接识别您身份的信息；传感器默认关闭，仅在相应玩法开启时使用。</td>
+          <td>与引擎运行相关的必要信息；传感器仅在相关玩法中短时使用。</td>
           <td>—</td>
         </tr>
       </tbody>
     </table>
-    <p class="small"><b>未接入说明：</b>本版本未接入 TapADN、Unity Ads/Mediation 等广告或跟踪类 SDK。</p>
   </section>
 
   <section>
     <h2>五、权限与系统能力使用</h2>
     <ul>
-      <li><b>网络访问</b>：用于登录校验、云存档与必要的在线交互。</li>
-      <li><b>存储读写</b>：用于本地存档和配置文件读写。</li>
-      <li><b>传感器（加速度计/陀螺仪）</b>：默认关闭，仅在进入相关玩法时启用；非必需。</li>
-      <li><b>通知/震动（可选）</b>：用于重要更新提醒，由系统再次授权。</li>
+      <li><b>网络访问</b>：用于登录校验、云存档及必要的在线交互。</li>
+      <li><b>存储读写</b>：用于本地存档与配置文件读写。</li>
+      <li><b>传感器（加速度计/陀螺仪）</b>：默认关闭；仅在进入相应玩法时启用，退出即停止。</li>
+      <li><b>通知/震动（可选）</b>：用于重要更新提醒，如启用由系统再次授权。</li>
     </ul>
   </section>
 
   <section>
-    <h2>六、Cookie 与同类技术</h2>
-    <p>本体验版未使用网页 Cookie。若未来在游戏内嵌网页组件产生 Cookie，我们将另行提示并征得您的同意。</p>
-  </section>
-
-  <section>
-    <h2>七、信息存储与跨境</h2>
+    <h2>六、信息存储与期限</h2>
     <ul>
-      <li><b>存储地点</b>：本地存档保存在您的设备；云存档（如启用）存储在第三方服务提供的中国境内服务器或其告知的存放位置。</li>
-      <li><b>存储期限</b>：在实现功能所必需的最短期间保存。若您<b>连续12个月未登录/未使用</b>，我们可能在通知后对云端存档进行清理或匿名化处理。</li>
-      <li><b>跨境传输</b>：当前版本<b>不进行</b>个人信息跨境传输。如未来发生，我们将依法完成评估/备案并<b>单独征求您的明确同意</b>。</li>
+      <li><b>存储地点</b>：本地数据保存在您的设备；云存档（如启用）存储在第三方服务的中国境内服务器或其告知的存放位置。</li>
+      <li><b>存储期限</b>：按实现目的所必需的最短期间保存。您<b>连续 12 个月未登录/未使用</b>时，我们可能在通知后对云端存档进行清理或匿名化处理。</li>
+      <li><b>跨境传输</b>：当前版本<b>不进行</b>个人信息跨境传输；如未来发生，将依法评估/备案并<b>单独征得您的明确同意</b>。</li>
     </ul>
   </section>
 
   <section>
-    <h2>八、信息安全措施</h2>
-    <p>我们采取访问控制、最小权限、传输加密、脱敏存储等措施保护您的信息安全。如发生安全事件，我们将按法规履行告知、上报与补救义务。</p>
+    <h2>七、信息安全</h2>
+    <p>我们采取访问控制、最小权限、传输加密与脱敏存储等措施保护数据安全。如发生安全事件，将按规定履行告知、上报与补救义务。</p>
   </section>
 
   <section>
-    <h2>九、未成年人保护</h2>
-    <p>本游戏面向<b>青少年及以上</b>用户，不以14周岁以下未成年人为目标用户。未成年人应在监护人同意并指导下使用。监护人可通过本政策“联系我们”与我们取得联系，处理与未成年人相关的个人信息事宜。</p>
+    <h2>八、未成年人保护</h2>
+    <p>本游戏面向<b>青少年及以上</b>用户，不以14周岁以下未成年人为目标用户。未成年人应在监护人同意并指导下使用。监护人可通过“联系我们”处理与未成年人相关的个人信息事宜。</p>
   </section>
 
   <section>
-    <h2>十、您的权利与实现路径</h2>
+    <h2>九、您的权利与实现路径</h2>
     <ul>
-      <li><b>访问/复制、更正/补充、删除</b>：您可就与您相关的信息提出相应请求。</li>
-      <li><b>撤回同意与停止使用</b>：您可随时撤回同意并停止使用本游戏；撤回后我们将停止处理相应信息（法律法规另有规定的除外），并可为您提供账号解绑/数据删除支持。</li>
-      <li><b>注销/解绑</b>：您可申请解除与平台账号的绑定或注销相关数据。</li>
-      <li><b>获取说明</b>：可请求我们就个人信息处理规则提供说明。</li>
+      <li><b>访问/复制、更正/补充、删除</b>与相关说明请求；</li>
+      <li><b>撤回同意与停止使用</b>：您可随时撤回对非必要处理的同意并停止使用；撤回后我们将停止相应处理（法律法规另有规定除外）；</li>
+      <li><b>解绑/注销</b>：可申请解除与平台账号的绑定或注销相关数据。</li>
     </ul>
-    <p class="small"><b>不同意即不使用：</b>若您不同意本政策，请不要安装或使用本游戏并立即卸载；若已安装且不同意，请退出并卸载。</p>
+    <p class="small"><b>不同意即不使用：</b>若您不同意本政策，请不要安装或使用并立即卸载；若已安装且不同意，请退出并卸载。</p>
   </section>
- 
+
   <section>
-    <h2>十一、联系我们</h2>
-    <p>如对本政策或个人信息保护有任何问题、建议或投诉，请联系：</p>
+    <h2>十、联系我们</h2>
     <ul>
       <li><b>TapTap</b>：在本游戏 TapTap 页面评论区或私信联系开发者；</li>
       <li><b>电子邮箱</b>：<a href="mailto:shanflyer@qq.com">shanflyer@qq.com</a>（如邮箱变更，以游戏内公告为准）。</li>
     </ul>
-    <p>我们将在收到您的请求后尽快反馈</b>。</p>
+    <p>我们将在收到您的请求后尽快反馈。</p>
   </section>
 
   <footer>© 2025 《幻想小镇·日常》开发者-永飞山。保留所有权利。</footer>
